# libcurl-callbacks-transport-adapter

./: CMakeLists.txt  README.md
src/: main.cpp  my_transport.cpp  my_transport.hpp
